@@ -1,3 +1,9 @@
+2012-08-30  Julien Danjou  <julien@danjou.info>
+
+	* gnus-notifications.el (gnus-notifications-notify): Use timeout from
+	`gnus-notifications-timeout'.
+	(gnus-notifications-timeout): Add.
+
 2012-08-29  Julien Danjou  <julien@danjou.info>
 
 	* gnus-notifications.el: New file.
